--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "Basic example of how to use TypeScript, Angular and RequireJS ",
   "main": "requireMain.js",
+  "repository": {
+    "type": "git"
+    ,"url": "https://github.com/joshorvis/TSAR"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +23,7 @@
     "angular-ui-bootstrap": "^2.3.2",
     "grunt": "^1.0.1",
     "grunt-contrib-requirejs": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-ts": "^6.0.0-beta.3",
     "jquery": "^3.1.1",
     "typescript": "^2.1.4"
