--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-ts": "^6.0.0-beta.3",
+    "grunt-tslint": "^4.0.0",
+    "tslint": "^4.2.0",
     "typescript": "^2.1.4"
   }
 }
